--- a/200116_tidyverse/index.Rmd
+++ b/200116_tidyverse/index.Rmd
@@ -13,6 +13,7 @@ output:
     
 header-includes:
 - \usepackage{booktabs}
+bibliography: [article.bib]
 ---
 
 ```{r setup, include=FALSE}
@@ -56,7 +57,7 @@ knitr::include_graphics('images/package.png')
 - 아래 그림은 R을 관리하는 CRAN에 공식적으로 등록된 패키지 숫자. 이 외에도 github를 통해 공유되는 비공식 패키지도 존재함 (https://github.com/hyunyulhenry/HenryQuant)
 
 ```{r echo = FALSE, fig.cap='CRAN 등록 패키지 수'}
-source('package_trend.R')
+# source('package_trend.R')
 tbl = read.csv('package_trend.csv', row.names = 1)
 
 lang = getOption("highcharter.lang")
@@ -897,8 +898,6 @@ library(xtable)
 print(xtable(reg), type = 'html')
 ```
 
-
-  
 <br>
 
 - ggplot2 패키지의 geom_smooth를 통해서도 회귀분석 그래프를 그릴 수 있음
@@ -971,7 +970,7 @@ rolling_ff_beta2 %>%
 
 ## rmarkdown
 
-- 문서 내에서 코드(R)과 텍스트(markdown)을 동시에 사용가능
+- 문서 내에서 코드(R, 파이썬 등)와 텍스트를 동시에 사용가능
 - R Markdown = knit**r** + Pandoc **Markdown**
 - Markdown
   - 일반적인 웹페이지는 마크업 언어(html: HyperText **Markup** Language)로 구성
@@ -1211,7 +1210,6 @@ ff_1819 %>%
                            ))
 ```
 
-
 ### 그래프 출력
 
 - 일반적으로 ggplot 이용
@@ -1254,6 +1252,77 @@ ff_select %>%
   hc_xAxis(title = '') %>%
   hc_tooltip(pointFormat = '{point.y: .4f}')
 ```
+
+### Reference 추가
+- 참고문헌(Reference) 추가는 bib 파일 이용
+- 먼저 https://scholar.google.com/ 에서 원하는 논문을 찾아 BibTeX 복사
+
+```{r echo = FALSE, fig.cap='rmarkdown 구성 요소'}
+knitr::include_graphics('images/bibtex.png')
+```
+
+- 복사한 내용을 **article.bib** 파일에 저장
+
+```
+@article{fama1993common,
+  title={Common risk factors in the returns on stocks and bonds},
+  author={Fama, Eugene F and French, Kenneth R},
+  journal={Journal of financial economics},
+  volume={33},
+  number={1},
+  pages={3--56},
+  year={1993},
+  publisher={Elsevier}
+}
+```
+
+- YAML 헤더에 다음 내용을 추가
+  - **bibliography: [article.bib]**
+  - 여러개의 bib 파일 사용할 경우 **bibliography: [a.bib, b.bib]** 형태로 추가
+
+```
+---
+title: "R Markdown"
+author: "이현열"
+date: "2020-01-01"
+output:
+  html_document:
+    toc: yes
+    toc_float: yes
+    toc_depth: 2
+    number_sections: TRUE
+bibliography: [article.bib]
+---
+```
+
+- 참고 문헌임을 밝히고 싶은 위치에 다음과 같이 입력
+  - @ 뒷부분에 bib에서 저장한 article 이름(fama1993common)을 입력
+
+```
+3 팩터 모형은 파마-프렌치[@fama1993common]에 의해 정의되었습니다.
+```
+
+- 이를 출력하면 다음과 같이 나타남
+<br>
+
+<div style="background-color:#d6d6ce;padding: 0px">
+3 팩터 모형은 파마-프렌치[@fama1993common]에 의해 정의되었습니다.
+</div>
+
+
+- Reference 페이지 생성을 위해 파일 가장 하단에 다음과 같이 입력
+  - \# Reference{-}
+  - {-}는 number section을 생성하지 않는 다는 의미
+  - 페이지의 가장 마지막에 Reference 페이지가 나타나며, bib에 저장된 모든 문헌이 나타나게 됨
+
+### 각주 삽입
+
+- 각주를 삽입하고 싶은 단어의 뒤에 **\^[내용]**을 입력하면, 페이지 최하단에 각주가 생성됨
+- 예: 각주를 삽입하고 싶을 시, 이곳\^[원하는 내용을 입력하세요]에 원하는 단어를 쓰시면 됩니다.
+
+<div style="background-color:#d6d6ce;padding: 0px">
+각주를 삽입하고 싶을 시, 이곳^[원하는 내용을 입력하세요]에 원하는 단어를 쓰시면 됩니다.
+</div>
 
 ## Shiny
 
@@ -1387,3 +1456,7 @@ shinyApp(ui = ui, server = server)
     - 예: https://user_name.shinyapps.io/app_name/
   - 간단 설명: https://shiny.rstudio.com/articles/shinyapps.html
   - 상세 설명: https://docs.rstudio.com/shinyapps.io/
+  
+---
+
+# Reference{-}
