--- a/data_wrangling/character.Rmd
+++ b/data_wrangling/character.Rmd
@@ -1,6 +1,6 @@
 # Character Strings
 
-R의 기본함수 및 문자열을 `stringr` 패키지를 이용해 쉽게 다룰 수 있습니다.
+문자열은 R의 기본함수 및`stringr` 패키지를 이용해 쉽게 다룰 수 있습니다.
 
 ## 문자열 기본
 
